# FFmpegStudy

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/app/axe/ffmpegstudy/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Log.h  native-lib.cpp
app/src/main/java/com/app/axe/ffmpegstudy/: MainActivity.java
app/src/main/java/com/app/axe/ffmpegstudy/playVideo/: PlayVideoActivity.java  VideoView.java
app/src/main/res/layout/: activity_play_video.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/app/axe/ffmpegstudy/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
